# agent-runtime-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/commands/agent-runtime-kit/: upgrade.md
.codex/skills/agent-runtime-kit-upgrade/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  sdk-evolution-report.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1.1-REQUIREMENTS.md  v0.1.1-ROADMAP.md
.planning/phases/01-core-runtime-skeleton/: 01-CONTEXT.md  01-PLAN.md  01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-events-and-test-harness/: 02-CONTEXT.md  02-PLAN.md  02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-claude-and-codex-runtimes/: 03-CONTEXT.md  03-PLAN.md  03-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-antigravity-and-cross-runtime-proof/: 04-CONTEXT.md  04-PLAN.md  04-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-public-release-readiness/: 05-CONTEXT.md  05-PLAN.md  05-SUMMARY.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.sdk-evolution/: README.md
docs/: api-stability.md  capability-matrix.md  live-smoke.md  mestre-migration.md  providers.md  publish-checklist.md  quickstart.md  sdk-evolution-agent-design.md  sdk-evolution-agent.md  task-control.md
docs/plans/: 2026-07-13-sdk-evolution-demo-reliability.md
examples/: __init__.py  run_same_task.py
examples/sdk_evolution_agent/: __init__.py  __main__.py  auth.py  behavior.py  cli.py  collectors.py  current_state.py  events.py  models.py  pr.py  preflight.py  release_notes.py  report.py  resolver.py  schemas.py  snapshots.py  stages.py  status_issue.py
openspec/changes/add-sdk-evolution-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-sdk-evolution-agent/specs/sdk-evolution-agent/: spec.md
reports/sdk-evolution-all-packages/20260622T091555Z/: architecture_decision.json  config.json  direction_analysis.json  events.jsonl  evidence.json  report.md  review.json
reports/sdk-evolution-all-packages/20260622T091555Z/api_snapshots/: 01-claude-agent-sdk.json  02-claude-agent-sdk.json  05-google-antigravity.json
reports/sdk-evolution-autonomous/20260622T153124Z/: architecture_decision.json  behavior_diffs.json  config.json  current_state.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  report.md  review.json
reports/sdk-evolution-autonomous/20260622T153124Z/api_snapshots/: 05-google-antigravity.json
reports/sdk-evolution-autonomous/20260622T153711Z/: architecture_decision.json  behavior_probes.json  config.json  current_state.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  release_notes.json  report.md  review.json
reports/sdk-evolution-autonomous/20260622T153711Z/api_snapshots/: 01-claude-agent-sdk.json  05-google-antigravity.json
reports/sdk-evolution-autonomous/20260622T154314Z/: api_diffs.json  architecture_decision.json  config.json  current_state.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  report.md  review.json
reports/sdk-evolution-autonomous/20260622T154314Z/api_snapshots/: 03-openai-codex.json  04-openai-codex-cli-bin.json  05-google-antigravity.json  06-google-antigravity.json
reports/sdk-evolution-proof/20260622T082120Z/: architecture_decision.json  config.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  report.md  review.json
reports/sdk-evolution-proof/20260622T082120Z/api_snapshots/: 01-google-antigravity.json
reports/sdk-evolution-proof/20260622T085528Z/: api_diffs.json  architecture_decision.json  config.json  direction_analysis.json  events.jsonl  evidence.json  report.md  review.json
reports/sdk-evolution-proof/20260622T085528Z/api_snapshots/: 01-google-antigravity.json
reports/sdk-evolution/20260626T151210Z/: architecture_decision.json  behavior_diffs.json  behavior_probes.json  config.json  current_state.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  release_notes.json  report.md  review.json
reports/sdk-evolution/20260626T151210Z/api_snapshots/: 05-google-antigravity.json
reports/sdk-evolution/20260627T212447Z/: api_diffs.json  architecture_decision.json  behavior_diffs.json  behavior_probes.json  config.json  current_state.json  direction_analysis.json  events.jsonl  evidence.json  implementation_summary.json  release_notes.json  report.md  review.json
reports/sdk-evolution/20260627T212447Z/api_snapshots/: 01-claude-agent-sdk.json  02-claude-agent-sdk.json  06-google-antigravity.json
scripts/: sdk_evolution_upgrade.py
src/agent_runtime_kit/: __init__.py  _control.py  _errors.py  _kit.py  _runtime.py  _schema.py  _types.py  compatibility.py  events.py  readiness.py  registry.py  sdk_evolution_upgrade.py  support.py
src/agent_runtime_kit/adapters/: __init__.py  _common.py  antigravity.py  claude.py  codex.py  diagnostics.py
src/agent_runtime_kit/testing/: __init__.py  fakes.py
tests/: test_adapter_common.py  test_adapter_protocol.py  test_antigravity_adapter.py  test_claude_adapter.py  test_codex_adapter.py  test_control.py  test_core.py  test_events.py  test_kit.py  test_live_smoke.py  test_mestre_compatibility.py  test_optional_dependencies.py  test_provider_diagnostics.py  test_readiness.py  test_schema.py  test_sdk_contract.py  test_sdk_evolution_agent.py  test_sdk_evolution_docs.py  test_sdk_evolution_pr_status.py  test_sdk_evolution_preflight.py  test_sdk_evolution_resolver.py  test_sdk_evolution_upgrade_script.py  test_support.py
