[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime-kit"
version = "0.1.0"
description = "One typed runtime API for Claude, Codex, and Antigravity agent SDKs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Eloi Barti" }]
keywords = ["agents", "claude", "codex", "antigravity", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.2.87"]
codex = ["openai-codex>=0.1.0b2"]
antigravity = ["google-antigravity>=0.1.2"]
all = [
    "claude-agent-sdk>=0.2.87",
    "google-antigravity>=0.1.2",
    "openai-codex>=0.1.0b2",
]

[project.urls]
Homepage = "https://github.com/ebarti/agent-runtime-kit"
Repository = "https://github.com/ebarti/agent-runtime-kit"
Issues = "https://github.com/ebarti/agent-runtime-kit/issues"

[dependency-groups]
dev = [
    "build>=1.2",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_kit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["agent_runtime_kit"]
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
markers = [
    "live: optional provider smoke tests that require explicit credentials and opt-in flags",
]
